# mymgs-bot-rs

./: .env  Cargo.toml
migrations/2021-10-16-073950_create_users/: up.sql
migrations/2021-10-16-120012_create_timetables/: down.sql  up.sql
migrations/2021-10-16-120019_create_days/: down.sql  up.sql
migrations/2021-10-16-120023_create_classes/: up.sql
src/: TODO  auth.rs  bot.rs  class.rs  day.rs  login.rs  main.rs  models.rs  persistence.rs  schema.rs  student.rs  timetable.rs  timetable_service.rs  user.rs
