[package]
name = "mymgs-bot"
version = "0.1.0"
edition = "2018"
authors = ["Kavika Palletenne <kbpalletenne@gmail.com>"]
description = "A Discord bot for viewing MGS timetables"
keywords = ["discord", "bot", "mgs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
hyper = { version = "0.14.13", features = ["full"] }
hyper-tls = "0.5.0"
url = "2.2.2"
sqlx = { version = "0.5.9", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
serenity = { version = "0.10.9" }